--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -110,6 +110,11 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
+      - name: Setup Firebase
+        uses: w9jds/setup-firebase@v1.0.0
+        with:
+          firebase_token: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
       - name: 'Setup function .env'
         run: |
           cat <<EOF > apps/functions/.env
@@ -128,8 +133,4 @@ jobs:
         working-directory: 'apps/functions'
 
       - name: 'Deploy functions'
-        uses: w9jds/firebase-action@v12.9.0
-        with:
-          args: deploy --only functions
-        env:
-          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+        run: 'firebase deploy --only functions'
