--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -113,7 +113,7 @@ jobs:
       - name: Setup Firebase
         uses: w9jds/setup-firebase@v1.0.0
         with:
-          firebase_token: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
       - name: 'Setup function .env'
         run: |
