--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -110,11 +110,6 @@ jobs:
           node-version: 18
           cache: 'yarn'
 
-      - name: Setup Firebase
-        uses: w9jds/setup-firebase@v1.0.0
-        with:
-          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
-
       - name: 'Setup function .env'
         run: |
           cat <<EOF > apps/functions/.env
@@ -132,5 +127,9 @@ jobs:
         run: 'yarn build'
         working-directory: 'apps/functions'
 
-      - name: 'Deploy functions'
-        run: 'firebase deploy --only functions --force'
+      - name: Deploy
+        uses: w9jds/firebase-action@v12.9.0
+        with:
+          args: deploy --only functions --force
+        env:
+          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
