--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -99,7 +99,7 @@ jobs:
         env:
           GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
-  build-deploy-functions:
+  build-deploy: #-functions:
     if: "!contains(github.event.head_commit.message, '[skip ci:functions]')"
     runs-on: ubuntu-latest
     steps:
@@ -107,7 +107,7 @@ jobs:
 
       - uses: actions/setup-node@v3
         with:
-          node-version: 16
+          node-version: 18
           cache: 'yarn'
 
       - name: 'Setup function .env'
@@ -124,9 +124,9 @@ jobs:
         run: 'yarn build'
         working-directory: 'apps/functions'
 
-      - name: Deploy
-        uses: w9jds/firebase-action@v12.9.0
-        with:
-          args: deploy --only functions --force
-        env:
-          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+      # - name: Deploy
+      #   uses: w9jds/firebase-action@v12.9.0
+      #   with:
+      #     args: deploy --only functions --force
+      #   env:
+      #     GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
