--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -106,15 +106,23 @@ jobs:
     steps:
       - uses: 'actions/checkout@v3'
 
+      - name: Setup Firebase
+        uses: w9jds/setup-firebase@v1.0.0
+        with:
+          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
+
+      - uses: actions/setup-node@v3
+        with:
+          node-version: 18
+          cache: 'yarn'
+
+      - name: 'Download dependencies (root)'
+        run: 'yarn install --frozen-lockfile'
+
       - uses: actions/setup-node@v3
         with:
           node-version: 18
           cache: 'npm'
-
-      - name: Deploy Rules
-        uses: w9jds/setup-firebase@v1.0.0
-        with:
-          GCP_SA_KEY: ${{ secrets.GCP_SERVICE_ACCOUNT_KEY }}
 
       - name: 'Setup function .env'
         run: |
@@ -122,7 +130,10 @@ jobs:
           ${{ vars.BUILD_FUNCTIONS_ENV_FILE }}
           EOF
 
-      - name: 'Download dependencies'
+      - name: 'mv deps'
+        run: 'mv node_modules apps/functions/'
+
+      - name: 'Download dependencies (functions)'
         run: 'npm ci'
         working-directory: 'apps/functions'
 
