[skip ci:storefront] fix: functions CICD

--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -131,7 +131,7 @@ jobs:
           EOF
 
       - name: 'cp deps'
-        run: 'cp node_modules apps/functions/'
+        run: 'cp -r node_modules apps/functions/'
 
       - name: 'Download dependencies (functions)'
         run: 'npm ci'
