--- a/package.json
+++ b/package.json
@@ -3,8 +3,7 @@
   "version": "0.0.0",
   "license": "MIT",
   "scripts": {
-    "dev": "nx run-many --target=dev --projects=storefront --parallel",
-    "build": "nx run-many --target=build --projects=storefront --parallel"
+    "dev": "nx run-many --target=dev --projects=storefront,api --parallel --output-style=stream"
   },
   "engines": {
     "node": "18"
@@ -21,8 +20,14 @@
     "@react-three/drei": "^9.97.5",
     "@react-three/fiber": "^8.15.16",
     "@tanstack/react-query": "^5.24.1",
+    "@tanstack/react-query-devtools": "^5.29.2",
+    "@trpc/client": "^11.0.0-rc.334",
+    "@trpc/next": "^11.0.0-rc.334",
+    "@trpc/react-query": "^11.0.0-rc.334",
+    "@trpc/server": "^11.0.0-rc.334",
     "algoliasearch": "^4.22.1",
     "axios": "^1.6.7",
+    "cors": "^2.8.5",
     "envsafe": "^2.0.3",
     "fast-xml-parser": "^4.3.4",
     "firebase": "^10.8.1",
@@ -49,6 +54,7 @@
     "sharp": "^0.33.3",
     "slugify": "^1.6.6",
     "stripe": "^14.14.0",
+    "superjson": "^2.2.1",
     "three": "^0.161.0",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2",
@@ -59,16 +65,19 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@next/bundle-analyzer": "^14.0.4",
+    "@nx/esbuild": "18.2.4",
     "@nx/eslint": "18.0.4",
     "@nx/eslint-plugin": "18.0.4",
-    "@nx/jest": "18.0.4",
-    "@nx/js": "18.0.4",
+    "@nx/jest": "18.2.4",
+    "@nx/js": "18.2.4",
+    "@nx/node": "^18.2.4",
     "@nx/react": "18.0.4",
     "@nx/workspace": "18.0.4",
     "@swc-node/register": "~1.8.0",
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
+    "@types/cors": "^2.8.17",
     "@types/jest": "^29.4.0",
     "@types/leaflet": "^1.9.8",
     "@types/node": "18.19.17",
@@ -86,6 +95,7 @@
     "babel-jest": "^29.4.1",
     "clsx": "^1.2.1",
     "csvtojson": "^2.0.10",
+    "esbuild": "^0.19.2",
     "eslint": "8.48.0",
     "eslint-config-next": "^14.0.2",
     "eslint-config-prettier": "9.0.0",
@@ -96,6 +106,7 @@
     "firebase-tools": "^12.9.1",
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
+    "jest-environment-node": "^29.4.1",
     "nx": "18.0.4",
     "nx-cloud": "18.0.0",
     "postcss": "8.4.21",
