refactor: move fabrics to trpc api

--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -19,6 +19,7 @@
     "pdfkit": "^0.14.0",
     "sharp": "^0.33.3",
     "stripe": "^14.14.0",
+    "superjson": "^1.13.3",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2",
     "zod": "^3.22.4"
