--- a/apps/functions/tsconfig.json
+++ b/apps/functions/tsconfig.json
@@ -8,6 +8,8 @@
     "sourceMap": false,
     "strict": true,
     "target": "es2017",
+    "noEmit": false,
+    "esModuleInterop": true
   },
   "include": [
     "src/**/*.ts", "src/vendor/plaiceholder.js",
