--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -10,6 +10,7 @@ jobs:
       packages: write
     if: "!contains(github.event.head_commit.message, '[skip ci:storefront]')"
     runs-on: ubuntu-latest
+    needs: [deploy-api]
     steps:
       - uses: 'actions/checkout@v3'
 
@@ -86,7 +87,37 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  deploy:
+  deploy-storefront:
+    runs-on: ubuntu-latest
+    needs: [build-push-storefront-image, build-push-api-image]
+    steps:
+      - uses: 'actions/checkout@v3'
+
+      # - name: 'Copy compose file over scp'
+      # already done in the deploy-api job
+
+      - name: 'Deploy'
+        uses: 'appleboy/ssh-action@v1.0.3'
+        with:
+          host: ${{ secrets.STOREFRONT_SSH_HOST }}
+          username: ${{ secrets.STOREFRONT_SSH_USER }}
+          password: ${{ secrets.STOREFRONT_SSH_PASSWORD }}
+          script_stop: true
+          script: |
+            cd ${{ secrets.STOREFRONT_DEPLOY_PATH }}
+            docker login -u $DOCKER_REGISTRY_USER -p $DOCKER_REGISTRY_PASS $DOCKER_REGISTRY
+            docker-compose pull storefront storefront-assets
+            docker-compose up -d storefront storefront-assets
+            docker system prune -a
+          envs: DOCKER_REGISTRY_USER,DOCKER_REGISTRY_PASS,DOCKER_REGISTRY,STOREFRONT_DOCKER_IMAGE,STOREFRONT_ASSETS_DOCKER_IMAGE
+        env:
+          DOCKER_REGISTRY_USER: ${{ github.actor }}
+          DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
+          STOREFRONT_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront:latest
+          STOREFRONT_ASSETS_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront-assets:latest
+
+  deploy-api:
     runs-on: ubuntu-latest
     needs: [build-push-storefront-image, build-push-api-image]
     steps:
@@ -114,14 +145,12 @@ jobs:
             docker-compose pull storefront storefront-assets api
             docker-compose up -d storefront storefront-assets api
             docker system prune -a
-          envs: DOCKER_REGISTRY_USER,DOCKER_REGISTRY_PASS,DOCKER_REGISTRY,STOREFRONT_DOCKER_IMAGE,STOREFRONT_ASSETS_DOCKER_IMAGE,API_DOCKER_IMAGE
+          envs: DOCKER_REGISTRY_USER,DOCKER_REGISTRY_PASS,DOCKER_REGISTRY,API_DOCKER_IMAGE
         env:
           DOCKER_REGISTRY_USER: ${{ github.actor }}
           DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
           DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
           API_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-api:latest
-          STOREFRONT_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront:latest
-          STOREFRONT_ASSETS_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront-assets:latest
 
   deploy-rules:
     runs-on: ubuntu-latest
