--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,16 @@
 version: '3.7'
 services:
+  db:
+    image: mongo:7.0
+    restart: always
+    volumes:
+      - db-data:/data/db
+    networks:
+      - default
+    expose:
+      - 27017
+    command: ['--replSet', 'rs0']
+
   directus:
     image: directus/directus:latest
     expose:
@@ -45,6 +56,7 @@ volumes:
   directus-database:
   directus-uploads:
   directus-extensions:
+  db-data:
 
 networks:
   vps-proxy:
