--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@heroicons/react": "^2.1.1",
     "@hookform/resolvers": "^3.3.4",
     "@nx/next": "18.0.6",
+    "@prisma/client": "5.12.1",
     "@react-three/drei": "^9.97.5",
     "@react-three/fiber": "^8.15.16",
     "@tanstack/react-query": "^5.24.1",
@@ -39,6 +40,7 @@
     "pdfkit": "^0.14.0",
     "plaiceholder": "^3.0.0",
     "posthog-js": "^1.108.3",
+    "prisma": "^5.12.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.12",
@@ -54,7 +56,7 @@
     "sharp": "^0.33.3",
     "slugify": "^1.6.6",
     "stripe": "^14.14.0",
-    "superjson": "^2.2.1",
+    "superjson": "^1.13.3",
     "three": "^0.161.0",
     "tsc-alias": "^1.8.8",
     "tslib": "^2.6.2",
@@ -111,6 +113,7 @@
     "nx-cloud": "18.0.0",
     "postcss": "8.4.21",
     "prettier": "^2.6.2",
+    "prisma-json-types-generator": "^3.0.4",
     "sass": "1.62.1",
     "tailwindcss": "3.4.1",
     "ts-jest": "^29.1.0",
