--- a/apps/storefront/Dockerfile
+++ b/apps/storefront/Dockerfile
@@ -18,6 +18,10 @@ RUN \
 FROM base AS builder
 WORKDIR /app
 COPY --from=deps /app/node_modules ./node_modules
+
+COPY prisma ./prisma
+RUN npx prisma generate
+
 COPY . .
 
 RUN \
