--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@getbrevo/brevo": "^2.0.0-beta.4",
     "@google-cloud/pubsub": "^4.2.0",
+    "@trpc/client": "^10.45.2",
     "axios": "^1.6.7",
     "envsafe": "^2.0.3",
     "fast-xml-parser": "^4.3.5",
