--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,7 @@
 version: '3.7'
 services:
   db:
-    image: mongo:7.0
+    image: mongo:6.0
     restart: always
     volumes:
       - db-data:/data/db
@@ -10,6 +10,10 @@ services:
     expose:
       - 27017
     command: ['--replSet', 'rs0']
+    environment:
+      MONGO_INITDB_ROOT_USERNAME: ${MONGO_INITDB_ROOT_USERNAME}
+      MONGO_INITDB_ROOT_PASSWORD: ${MONGO_INITDB_ROOT_PASSWORD}
+      MONGO_INITDB_DATABASE: ${MONGO_INITDB_DATABASE}
 
   directus:
     image: directus/directus:latest
