--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@trpc/server": "^11.0.0-rc.334",
     "algoliasearch": "^4.22.1",
     "axios": "^1.6.7",
+    "bcrypt": "^5.1.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "envsafe": "^2.0.3",
+    "express": "^4.19.2",
     "fast-xml-parser": "^4.3.4",
     "firebase": "^10.8.1",
     "firebase-admin": "^12.0.0",
@@ -79,7 +82,10 @@
     "@swc/core": "~1.3.85",
     "@swc/helpers": "~0.5.2",
     "@testing-library/react": "14.0.0",
+    "@types/bcrypt": "^5.0.2",
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
+    "@types/express": "^4.17.21",
     "@types/jest": "^29.4.0",
     "@types/leaflet": "^1.9.8",
     "@types/node": "18.19.17",
