refactor: handle articles with trpc

--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,6 +1,7 @@
 {
   "compileOnSave": false,
   "compilerOptions": {
+    "typeRoots": ["node_modules/@types", "prisma/@types"],
     "rootDir": ".",
     "sourceMap": true,
     "declaration": false,
