--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -10,7 +10,6 @@ jobs:
       packages: write
     if: "!contains(github.event.head_commit.message, '[skip ci:storefront]')"
     runs-on: ubuntu-latest
-    needs: [deploy-api]
     steps:
       - uses: 'actions/checkout@v3'
 
@@ -91,6 +90,7 @@ jobs:
 
   deploy-storefront:
     runs-on: ubuntu-latest
+    needs: [build-push-storefront-image]
     steps:
       - uses: 'actions/checkout@v3'
 
