--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -9,24 +9,15 @@
   },
   "main": "dist/apps/functions/src/index.js",
   "dependencies": {
-    "@getbrevo/brevo": "^2.0.0-beta.4",
-    "@google-cloud/pubsub": "^4.2.0",
     "@trpc/client": "^11.0.0-rc.340",
-    "axios": "^1.6.7",
     "envsafe": "^2.0.3",
-    "fast-xml-parser": "^4.3.5",
     "firebase-admin": "^12.0.0",
     "firebase-functions": "^4.7.0",
-    "pdfkit": "^0.14.0",
-    "sharp": "^0.33.3",
-    "stripe": "^14.14.0",
     "superjson": "^1.13.3",
     "tsc-alias": "^1.8.8",
-    "tslib": "^2.6.2",
-    "zod": "^3.22.4"
+    "tslib": "^2.6.2"
   },
   "devDependencies": {
-    "concurrently": "^8.2.2",
     "typescript": "^5.2.2"
   },
   "private": true
