--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "bson": "^6.6.0",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "envsafe": "^2.0.3",
