--- a/apps/functions/package.json
+++ b/apps/functions/package.json
@@ -15,7 +15,8 @@
     "firebase-functions": "^4.7.0",
     "superjson": "^1.13.3",
     "tsc-alias": "^1.8.8",
-    "tslib": "^2.6.2"
+    "tslib": "^2.6.2",
+    "zod": "^3.23.4"
   },
   "devDependencies": {
     "typescript": "^5.2.2"
