feat: choose piping

--- a/extensions/storage-resize-images.env
+++ b/extensions/storage-resize-images.env
@@ -4,7 +4,7 @@ FUNCTION_MEMORY=1024
 IMAGE_TYPE=webp,png
 IMG_BUCKET=${param:PROJECT_ID}.appspot.com
 IMG_SIZES=64x128,128x256,256x512,512x1024,1024x2048
-INCLUDE_PATH_LIST=/articles,/fabrics,/orders,/carts,/cms
+INCLUDE_PATH_LIST=/articles,/fabrics,/orders,/carts,/cms,/pipings
 IS_ANIMATED=true
 MAKE_PUBLIC=false
 SHARP_OPTIONS={"fit":"inside","position":"center"}
