--- a/extensions/storage-resize-images.env
+++ b/extensions/storage-resize-images.env
@@ -7,5 +7,5 @@ IMG_SIZES=64x128,128x256,256x512,512x1024,1024x2048
 INCLUDE_PATH_LIST=/articles,/fabrics,/orders,/carts,/cms,/pipings
 IS_ANIMATED=true
 MAKE_PUBLIC=false
+REGENERATE_TOKEN=true
 SHARP_OPTIONS={"fit":"inside","position":"center"}
-LOCATION=europe-west3
