--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "isbot": "^5.1.1",
     "leaflet": "^1.9.4",
     "next": "^14.2.1",
+    "next-plugin-svgr": "^1.1.10",
     "pdfkit": "^0.14.0",
     "plaiceholder": "^3.0.0",
     "posthog-js": "^1.129.0",
@@ -58,7 +59,7 @@
     "react-use-measure": "^2.1.1",
     "sanitize-html": "^2.13.0",
     "schema-dts": "^1.1.2",
-    "sharp": "^0.33.3",
+    "sharp": "^0.33.4",
     "slugify": "^1.6.6",
     "stripe": "^14.24.0",
     "superjson": "^1.13.3",
