feat: shipping offers in structured data

--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "leaflet": "^1.9.4",
     "next": "^14.2.1",
     "next-plugin-svgr": "^1.1.10",
+    "node-cron": "^3.0.3",
     "pdfkit": "^0.14.0",
     "plaiceholder": "^3.0.0",
     "posthog-js": "^1.136.0",
@@ -92,6 +93,7 @@
     "@types/jest": "^29.4.0",
     "@types/leaflet": "^1.9.8",
     "@types/node": "18.19.17",
+    "@types/node-cron": "^3.0.11",
     "@types/pdfkit": "^0.13.4",
     "@types/react": "18.2.24",
     "@types/react-dom": "18.2.9",
