feat: trackable links generator

--- a/package.json
+++ b/package.json
@@ -46,7 +46,7 @@
     "node-cron": "^3.0.3",
     "pdfkit": "^0.14.0",
     "plaiceholder": "^3.0.0",
-    "posthog-js": "^1.136.0",
+    "posthog-js": "^1.138.1",
     "prisma": "^5.13.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
@@ -56,6 +56,7 @@
     "react-hot-toast": "^2.4.1",
     "react-intersection-observer": "^9.10.2",
     "react-leaflet": "^4.2.1",
+    "react-qr-code": "^2.0.14",
     "react-schemaorg": "^2.0.0",
     "react-use-measure": "^2.1.1",
     "sanitize-html": "^2.13.0",
