--- a/package.json
+++ b/package.json
@@ -15,8 +15,7 @@
   "dependencies": {
     "@getbrevo/brevo": "^2.0.0-beta.4",
     "@google-cloud/pubsub": "^4.3.3",
-    "@headlessui/react": "^1.7.18",
-    "@headlessui/tailwindcss": "^0.2.0",
+    "@headlessui/react": "^2.0.4",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
     "@prisma/client": "5.14.0",
@@ -50,8 +49,8 @@
     "plaiceholder": "^3.0.0",
     "posthog-js": "^1.138.1",
     "prisma": "^5.13.0",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "18.3.1",
+    "react-dom": "18.3.1",
     "react-error-boundary": "^4.0.13",
     "react-google-recaptcha": "^3.1.0",
     "react-hook-form": "^7.51.0",
@@ -77,20 +76,20 @@
     "@babel/core": "^7.14.5",
     "@babel/preset-react": "^7.14.5",
     "@next/bundle-analyzer": "^14.0.4",
-    "@nx/esbuild": "18.2.4",
-    "@nx/eslint": "18.0.4",
-    "@nx/eslint-plugin": "18.0.4",
-    "@nx/jest": "18.2.4",
-    "@nx/js": "18.3.3",
-    "@nx/next": "18.3.3",
-    "@nx/node": "^18.2.4",
-    "@nx/react": "18.3.3",
-    "@nx/workspace": "18.0.4",
-    "@swc-node/register": "~1.8.0",
-    "@swc/cli": "~0.1.62",
-    "@swc/core": "~1.3.85",
-    "@swc/helpers": "~0.5.2",
-    "@testing-library/react": "14.0.0",
+    "@nx/esbuild": "19.2.3",
+    "@nx/eslint": "19.2.3",
+    "@nx/eslint-plugin": "19.2.3",
+    "@nx/jest": "19.2.3",
+    "@nx/js": "19.2.3",
+    "@nx/next": "19.2.3",
+    "@nx/node": "19.2.3",
+    "@nx/react": "19.2.3",
+    "@nx/workspace": "19.2.3",
+    "@swc-node/register": "1.9.2",
+    "@swc/cli": "0.3.12",
+    "@swc/core": "1.5.7",
+    "@swc/helpers": "0.5.11",
+    "@testing-library/react": "15.0.6",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
@@ -100,21 +99,21 @@
     "@types/node": "18.19.17",
     "@types/node-cron": "^3.0.11",
     "@types/pdfkit": "^0.13.4",
-    "@types/react": "18.2.33",
-    "@types/react-dom": "18.2.14",
+    "@types/react": "18.3.1",
+    "@types/react-dom": "18.3.0",
     "@types/react-google-recaptcha": "^2.1.8",
     "@types/sanitize-html": "^2.11.0",
     "@types/three": "^0.157.2",
     "@types/uuid": "^9.0.4",
     "@types/yargs": "^17.0.32",
-    "@typescript-eslint/eslint-plugin": "6.21.0",
-    "@typescript-eslint/parser": "6.21.0",
+    "@typescript-eslint/eslint-plugin": "7.9.0",
+    "@typescript-eslint/parser": "7.9.0",
     "autoprefixer": "10.4.13",
     "babel-jest": "^29.4.1",
     "clsx": "^1.2.1",
     "csvtojson": "^2.0.10",
     "esbuild": "^0.19.2",
-    "eslint": "8.48.0",
+    "eslint": "8.57.0",
     "eslint-config-next": "14.0.4",
     "eslint-config-prettier": "9.0.0",
     "eslint-plugin-import": "2.27.5",
@@ -125,16 +124,16 @@
     "jest": "^29.4.1",
     "jest-environment-jsdom": "^29.4.1",
     "jest-environment-node": "^29.4.1",
-    "nx": "18.0.4",
-    "nx-cloud": "18.0.0",
-    "postcss": "8.4.21",
+    "nx": "19.2.3",
+    "nx-cloud": "19.0.0",
+    "postcss": "8.4.38",
     "prettier": "^2.6.2",
     "prisma-json-types-generator": "^3.0.4",
     "sass": "1.62.1",
-    "tailwindcss": "3.4.1",
+    "tailwindcss": "3.4.3",
     "ts-jest": "^29.1.0",
     "ts-node": "10.9.1",
-    "typescript": "5.3.3",
+    "typescript": "5.4.5",
     "wget-improved": "^3.4.0",
     "yargs": "^17.7.2"
   }
