--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "@headlessui/react": "^2.1.1",
     "@heroicons/react": "^2.1.3",
     "@hookform/resolvers": "^3.3.4",
-    "@prisma/client": "5.15.0",
+    "@prisma/client": "^5.19.0",
     "@react-three/drei": "^9.105.1",
     "@react-three/fiber": "^8.16.6",
     "@tanstack/react-query": "^5.35.1",
@@ -48,7 +48,7 @@
     "pdfkit": "^0.14.0",
     "plaiceholder": "^3.0.0",
     "posthog-js": "^1.141.4",
-    "prisma": "^5.13.0",
+    "prisma": "^5.19.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-error-boundary": "^4.0.13",
@@ -62,7 +62,7 @@
     "react-use-measure": "^2.1.1",
     "sanitize-html": "^2.13.0",
     "schema-dts": "^1.1.2",
-    "sharp": "^0.33.4",
+    "sharp": "^0.33.5",
     "slugify": "^1.6.6",
     "stripe": "^14.24.0",
     "superjson": "^1.13.3",
