--- a/package.json
+++ b/package.json
@@ -90,6 +90,7 @@
     "@swc/core": "1.5.7",
     "@swc/helpers": "0.5.11",
     "@testing-library/react": "15.0.6",
+    "@tweenjs/tween.js": "^25.0.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
