--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "@prisma/client": "^5.19.0",
     "@react-three/drei": "^9.105.1",
     "@react-three/fiber": "^8.16.6",
+    "@sentry/node": "^8.34.0",
+    "@sentry/profiling-node": "^8.34.0",
     "@tanstack/react-query": "^5.35.1",
     "@tanstack/react-query-devtools": "^5.34.2",
     "@trpc/client": "^11.0.0-rc.334",
