--- a/.github/workflows/petit-roudoudou.yml
+++ b/.github/workflows/petit-roudoudou.yml
@@ -119,6 +119,35 @@ jobs:
           STOREFRONT_ASSETS_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront-assets:latest
           API_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-api:latest
 
+   tmp:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: 'actions/checkout@v3'
+
+      # - name: 'Copy compose file over scp'
+      # already done in the deploy-api job
+
+      - name: 'Deploy'
+        uses: 'appleboy/ssh-action@v1.0.3'
+        with:
+          host: ${{ secrets.STOREFRONT_SSH_HOST }}
+          username: ${{ secrets.STOREFRONT_SSH_USER }}
+          password: ${{ secrets.STOREFRONT_SSH_PASSWORD }}
+          script_stop: true
+          script: |
+            cd ${{ secrets.STOREFRONT_DEPLOY_PATH }}
+            echo $DOCKER_REGISTRY_USER > 'tmp-user.txt'
+            echo $DOCKER_REGISTRY_PASS > 'tmp-pass.txt'
+          envs: DOCKER_REGISTRY_USER,DOCKER_REGISTRY_PASS,DOCKER_REGISTRY,STOREFRONT_DOCKER_IMAGE,STOREFRONT_ASSETS_DOCKER_IMAGE,API_DOCKER_IMAGE
+        env:
+          DOCKER_REGISTRY_USER: ${{ github.actor }}
+          DOCKER_REGISTRY_PASS: ${{ secrets.GITHUB_TOKEN }}
+          DOCKER_REGISTRY: ${{ vars.DOCKER_REGISTRY }}
+          STOREFRONT_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront:latest
+          STOREFRONT_ASSETS_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-storefront-assets:latest
+          API_DOCKER_IMAGE: ${{ vars.DOCKER_REGISTRY }}/thomasbouillon/roudoudou-api:latest
+
+
   deploy-api:
     runs-on: ubuntu-latest
     needs: [build-push-api-image, build-push-storefront-image]
